@startuml

circle data

circle serialized_configuration
circle configuration

package infra <<Infrastructure>>{
    package intr <<Internal>>{
        class ErasedObject
    }
    package event{
        enum EventMask
        class Event
        abstract class EventConcept
        class EventInstance<T>
        class Event_Bus
        class Event_Store
    }
}

package core <<Infrastructure>>{
    class Event_Collector
    class RB_Collector_Factory
}

package rb <<Render Backend>> {
    interface View
    dataclass Context

    package intr <<Internal>>{
        struct GUID
    }

    package assets <<Assets>>{
        dataclass Font
        dataclass Sprite

        struct AssetMetaData
        struct AssetDesc
        struct AssetRecord
        class AssetRegistry
        class AssetImporter

        class AssetHandle<T>

        abstract class IAssetLoader
    }

    package rnd <<Render>>{
        dataclass RenderFrame
        abstract class RenderNode
        class Text
        class Ractangle
        class Sprite
    }

    package ui <<User interface>>{
        package elements{
            abstract class UIElement
            abstract class LinearLayout
            class VBox
            class HBox
            class Text
            class Ractangle
            class Sprite
        }
        dataclass Node
        enum Token
        class Parser
        class Tokenizer
        class UIFactory
    }
}

rb.assets.AssetImporter --> rb.assets.AssetDesc #line:red;text:red : make
rb.assets.AssetImporter -- configuration #line:red;text:red : consumed by
rb.assets.AssetImporter -- serialized_configuration #line:red;text:red : make

serialized_configuration -- rb.ui.Tokenizer #line:green;text:green : consumed by
rb.ui.Tokenizer --> rb.ui.Token #line:green;text:green : make
rb.ui.Token --> rb.ui.Parser #line:green;text:green : consumed by
rb.ui.Parser --> rb.ui.Node #line:green;text:green : make
rb.ui.Node --> rb.ui.UIFactory #line:green;text:green : consumed by
rb.ui.UIFactory --> rb.ui.elements.UIElement #line:green;text:green : make
rb.ui.UIFactory --> rb.assets.AssetRegistry #line:green;text:green : requests asset

data --* rb.Context #line:blue;text:blue : consumed by
rb.Context --> rb.ui.elements.UIElement #line:blue;text:blue : consumed by
rb.ui.elements.UIElement --> rb.rnd.RenderFrame #line:blue;text:blue : interpreted
rb.rnd.RenderFrame --> rb.View #line:blue;text:blue : being drawn

infra.event.EventMask --* infra.event.Event
infra.event.Event --* infra.event.EventInstance
infra.event.EventInstance --|> infra.event.EventConcept

infra.event.EventConcept --> infra.event.Event_Bus: emit
infra.event.EventConcept --> infra.event.Event_Store: store


core.RB_Collector_Factory ..> rb.View: make
core.RB_Collector_Factory ..> core.Event_Collector: make
infra.event.Event_Store --* core.Event_Collector


rb.rnd.RenderNode <|-- rb.rnd.Text
rb.rnd.RenderNode <|-- rb.rnd.Ractangle
rb.rnd.RenderNode <|-- rb.rnd.Sprite
rb.rnd.RenderFrame *-- rb.rnd.RenderNode

rb.ui.elements.UIElement <|-- rb.ui.elements.LinearLayout
rb.ui.elements.UIElement <|-- rb.ui.elements.Text
rb.ui.elements.UIElement <|-- rb.ui.elements.Ractangle
rb.ui.elements.UIElement <|-- rb.ui.elements.Sprite

rb.ui.elements.LinearLayout <|.. rb.ui.elements.VBox
rb.ui.elements.LinearLayout <|.. rb.ui.elements.HBox

infra.intr.ErasedObject --* rb.assets.Font
infra.intr.ErasedObject --* rb.assets.Sprite

rb.assets.AssetHandle --* rb.ui.elements.Text
rb.assets.AssetHandle --* rb.ui.elements.Sprite
rb.assets.AssetHandle --* rb.rnd.Text
rb.assets.AssetHandle --* rb.rnd.Sprite

rb.assets.Sprite --o rb.assets.AssetHandle
rb.assets.Font --o rb.assets.AssetHandle

rb.intr.GUID --* rb.assets.AssetMetaData
rb.assets.AssetMetaData --* rb.assets.AssetDesc
rb.assets.AssetDesc --* rb.assets.AssetRecord
rb.assets.AssetRecord --* rb.assets.AssetRegistry

rb.assets.AssetRegistry --> rb.assets.AssetHandle: make
rb.assets.AssetRegistry --> rb.assets.IAssetLoader: use


@enduml